--- a/styles.scss
+++ b/styles.scss
@@ -30,6 +30,8 @@ $presentation-font-size-root: 35px;
   font-size: 1.5em;
   padding: 0.5em;
   line-height: 1.2em;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 
@@ -89,8 +91,10 @@ section.has-dark-background a, section.has-dark-background a:hover {
   color: $body-color !important;
 }
 
-.reveal .cell-output .cell-output-display{
-  font-size: 12px !important;
+table.dataframe {
+  font-size: 0.65em;         /* Tamanho da fonte */
+  max-width: 70%;           /* Largura máxima da tabela */
+  margin: 0 auto;           /* Centraliza horizontalmente */
 }
 
 .reveal pre.sourceCode code{
